<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.example.raniamofeed.project_androidfci.Search">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp">
        <TextView
            android:text="@string/na"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lo"
            android:textColor="@color/face"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true" />
        <TextView
            android:text="@string/na2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lo2"
            android:textSize="15dp"
            android:textStyle="italic"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="13dp"
            android:layout_alignTop="@+id/lo"
            android:layout_toRightOf="@+id/lo" />

        <TextView
            android:text="@string/na3"
            android:textColor="@color/face"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lo3"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_below="@+id/lo2"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingRight="60dp"
            android:layout_below="@+id/relativeLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="80dp"
            android:padding="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/stethoscope"
                        android:layout_gravity="center"/>
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/sp3"
                        android:textDirection="ltr"
                        android:layout_weight="1" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#5fff"></LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/cash"
                        android:layout_gravity="center"/>
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/sp5"
                        android:textDirection="ltr"
                        android:layout_weight="1" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#5fff"></LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/diploma"
                        android:layout_gravity="center"/>
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/sp6"
                        android:textDirection="ltr"
                        android:layout_weight="1" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#5fff"></LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#5fff"></LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:paddingLeft="16dp">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/placeholder"
                        android:layout_gravity="center"
                        />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/sp4"
                        android:textDirection="ltr"
                        android:layout_weight="1" />
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="30dp"
                        android:src="@drawable/map"
                        android:layout_gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#5fff"></LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/doctor"
                        android:layout_gravity="center"/>
                    <EditText
                        android:id="@+id/usrusr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Name of Doctor"
                        android:textColorHint="#fff"
                        android:layout_marginLeft="15dp"
                        android:background="#00000000"
                        android:letterSpacing="0.1"
                        android:textSize="16dp"
                        android:textColor="#fff"
                        android:inputType="text"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#5fff"></LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="22dp">
                    <Button
                        android:id="@+id/found"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="found Doctor"
                        android:textColor="#fff"
                        android:background="@drawable/border"
                        android:padding="15dp"
                        android:layout_weight="1"
                        android:textSize="16dp"
                        android:layout_marginTop="15dp"
                        android:textStyle="bold"
                        />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>



    </LinearLayout>


</RelativeLayout>
